<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_location"
        android:icon="@drawable/ic_location_city"
        android:title="@string/nav_location" />
    <item
        android:id="@+id/nav_food"
        android:icon="@drawable/ic_food"
        android:title="@string/nav_food" />
    <item
        android:id="@+id/nav_trans"
        android:icon="@drawable/ic_transit"
        android:title="@string/nav_trans" />
    <item
        android:id="@+id/nav_person"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_person" />



</menu>